[package]
name = "better-builds-prototype"
version = "0.1.0"
authors = ["Travis Long <tlong@mozilla.com>"]
edition = "2018"

[lib]
name = "better_builds_prototype"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# Application Services
autofill = { path = "application-services/components/autofill" }
fxaclient_ffi = { path = "application-services/components/fxa-client/ffi" }
logins_ffi = { path = "application-services/components/logins/ffi" }
places-ffi = { path = "application-services/components/places/ffi" }
push-ffi = { path = "application-services/components/push/ffi" }
rc_log_ffi = { path = "application-services/components/rc_log" }
ffi-support = { path = "application-services/components/support/ffi" }
sync_manager_ffi = { path = "application-services/components/sync_manager/ffi" }
tabs_ffi = { path = "application-services/components/tabs/ffi" }
viaduct = { path = "application-services/components/viaduct" }
webext-storage-ffi = { path = "application-services/components/webext-storage/ffi" }

# Glean
glean-ffi = { path = "glean/glean-core/ffi" }

# Nimbus
nimbus-sdk = { path = "nimbus-sdk/nimbus" }

# Needed to treat pointers like lazy-statics
lazy_static = "1.4"

[workspace]
# Excluding these to avoid the virtual workspace cargo.toml files for the individual
# projects. Also including the "excludes" from those virtual workspaces, but not sure
# if that is necessary or not because we are using "path" dependencies here.
exclude = [
    "application-services",
    "application-services/megazords/full",
    "application-services/megazords/ios",
    "application-services/components/external/glean",
    "application-services/components/external/nimbus-sdk",
    "glean",
    "glean/samples/multi-bindings",
    "uniffi-rs"
]

# We import some git submodules which in turn may depend on appservices crates.
# We always want to use the local version of our own crates in that case.
[patch."https://github.com/mozilla/application-services"]
viaduct = { path = "application-services/components/viaduct" }

[patch."https://github.com/mozilla/nimbus-sdk"]
nimbus-sdk = { path = "nimbus-sdk/nimbus" }

[patch.crates-io]
uniffi = { path = "uniffi-rs/uniffi" }
uniffi_bindgen = { path = "uniffi-rs/uniffi_bindgen" }
uniffi_build = { path = "uniffi-rs/uniffi_build" }
